tests/shouldfail/Poly2.hs
module Poly2 where
import Clash.Prelude

topEntity :: (a ~ Bool) => a -> b -> a
topEntity x y = x
